--- a/src/transform_window.ui
+++ b/src/transform_window.ui
@@ -48,7 +48,7 @@
           <property name="margin-start">10</property>
           <layout>
            <property name="column">0</property>
-           <property name="row">0</property>
+           <property name="row">2</property>
            <property name="column-span">1</property>
           </layout>
          </object>
@@ -61,9 +61,32 @@
            <property name ="hexpand">true</property>
           <layout>
            <property name="column">1</property>
-           <property name="row">0</property>
+           <property name="row">2</property>
            <property name="column-span">1</property>
           </layout>
+         </object>
+        </child>
+                   <child>
+        <object class="GtkScrolledWindow">
+          <property name="height-request">150</property>
+          <property name="width-request">375</property>"
+          <property name="hexpand">true</property>
+          <property name="vexpand">true</property>
+          <property name="margin-top">6</property>
+          <property name="margin-bottom">6</property>
+          <property name="margin-start">6</property>
+          <property name="margin-end">6</property>
+          <child>
+            <object class="GtkTextView" id="transform_info">
+            <property name="editable">false</property>
+            </object>
+            </child>
+          <layout>
+           <property name="column">0</property>
+           <property name="row">0</property>
+           <property name="column-span">2</property>
+          </layout>
+
          </object>
         </child>
         <child>
@@ -75,7 +98,7 @@
           <property name="margin-bottom">10</property>
           <layout>
            <property name="column">1</property>
-           <property name="row">2</property>
+           <property name="row">3</property>
            <property name="column-span">2</property>
           </layout>
          </object>
