--- a/src/add_equation_window.ui
+++ b/src/add_equation_window.ui
@@ -7,6 +7,16 @@
    <property name="default-width">256</property>
   <property name="default-height">125</property>
   <child>
+   <object class="GtkShortcutController">
+    <child>
+     <object class="GtkShortcut">
+      <property name="trigger">Escape</property>
+      <property name="action">action(window.close)</property>
+     </object>
+    </child>
+   </object>
+  </child>
+  <child>
    <object class="GtkBox">
     <property name="orientation">vertical</property>
     <child>
