--- a/src/preferences.ui
+++ b/src/preferences.ui
@@ -8,6 +8,207 @@
     <child>
       <object class="AdwPreferencesPage">
         <property name="visible">True</property>
+        <property name="can-focus">True</property>
+        <property name="icon-name">applications-system-symbolic</property>
+        <property name="title">General</property>
+        <child>
+          <object class="AdwPreferencesGroup">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="title" translatable="yes">Import settings</property>
+            <property name="description" translatable="yes">Settings for importing graphs</property>
+            <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="title" translatable="yes">Delimiter</property>
+                <property name="subtitle" translatable="yes">Choose the delimiter that separates the columns (\t for tab)</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkEntry" id="delimiter">
+                    <property name="text">\t</property>
+                    <property name="valign">center</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="title" translatable="yes">Decimal separator</property>
+                <property name="subtitle" translatable="yes">Choose which character to use as a decimal separator</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkEntry" id="decimal seperator">
+                    <property name="text">.</property>
+                    <property name="valign">center</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="title" translatable="yes">Column X</property>
+                <property name="subtitle" translatable="yes">Choose which column to load for the X-data</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkSpinButton" id ="column_x">
+            <property name="vexpand">False</property>
+            <property name="vexpand-set">False</property>
+            <property name="adjustment">spin_button_column_x</property>
+            <property name="numeric">True</property>
+            <property name="value">0</property>
+            <property name="wrap">True</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+            <property name="vexpand">False</property>
+                <property name="title" translatable="yes">Column Y</property>
+                <property name="subtitle" translatable="yes">Choose which column to load for the Y-data</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkSpinButton" id ="column_y">
+            <property name="vexpand">False</property>
+            <property name="adjustment">spin_button_column_y</property>
+            <property name="numeric">True</property>
+            <property name="value">1</property>
+            <property name="wrap">True</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+            <property name="vexpand">False</property>
+                <property name="title" translatable="yes">Skip rows</property>
+                <property name="subtitle" translatable="yes">Choose how many rows to skip while loading data</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkSpinButton" id ="skip_rows">
+            <property name="vexpand">False</property>
+            <property name="adjustment">spin_button_skip_rows</property>
+            <property name="numeric">True</property>
+            <property name="value">1</property>
+            <property name="wrap">True</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+          </object>
+          </child>
+        <child>
+          <object class="AdwPreferencesGroup">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="title" translatable="yes">Saved plots</property>
+            <property name="description" translatable="yes">General settings for the saved graphs</property>
+            <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="title" translatable="yes">Default filetype</property>
+                <property name="subtitle" translatable="yes">Choose the default filetype of saved graphs</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkDropDown" id="savefig_filetype_chooser">
+                    <property name="valign">center</property>
+                    <property name="model">
+                      <object class="GtkStringList" id="savefig_filetype_list">
+                        <items>
+                          <item translatable="yes">png</item>
+                          <item translatable="yes">ps</item>
+                          <item translatable="yes">pdf</item>
+                          <item translatable="yes">svg</item>
+                        </items>
+                      </object>
+                    </property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="title" translatable="yes">Transparent background</property>
+                <property name="subtitle" translatable="yes">Use a transparent background for the saved plots</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkCheckButton" id="savefig_transparent_check_button">
+                    <property name="halign">end</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+          </object>
+          </child>
+          <child>
+          <object class="AdwPreferencesGroup">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="title" translatable="yes">Action behaviour</property>
+            <property name="description" translatable="yes">Preset behaviour of specific actions</property>
+            <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="title" translatable="yes">Center data</property>
+                <property name="subtitle" translatable="yes">Choose the default behaviour of the center data button</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkDropDown" id="center_data_chooser">
+                    <property name="valign">center</property>
+                    <property name="model">
+                      <object class="GtkStringList">
+                        <items>
+                          <item translatable="yes">Center at maximum Y value</item>
+                          <item translatable="yes">Center at middle coordinate</item>
+                        </items>
+                      </object>
+                    </property>
+                  </object>
+                </child>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child>
+          <object class="AdwPreferencesGroup">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="title" translatable="yes">Other</property>
+            <property name="description" translatable="yes">Other general settings</property>
+            <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="title" translatable="yes">Allow duplicate filenames</property>
+                <property name="subtitle" translatable="yes">Allow duplicate filenames to be loaded</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkCheckButton" id="allow_duplicates_button">
+                    <property name="halign">end</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+          </object>
+        </child>
+      </object>
+    </child>"
+    <child>
+      <object class="AdwPreferencesPage">
+        <property name="visible">True</property>
         <property name="icon-name">applications-graphics-symbolic</property>
         <property name="title">Plot</property>
       <child>
@@ -521,112 +722,18 @@
         </child>
       </object>
     </child>
-    <child>
-      <object class="AdwPreferencesPage">
-        <property name="visible">True</property>
-        <property name="can-focus">False</property>
-        <property name="icon-name">applications-system-symbolic</property>
-        <property name="title">General</property>
-        <child>
-          <object class="AdwPreferencesGroup">
-            <property name="visible">True</property>
-            <property name="can-focus">False</property>
-            <property name="title" translatable="yes">Saved plots</property>
-            <property name="description" translatable="yes">General settings for the saved graphs</property>
-            <child>
-              <object class="AdwActionRow">
-                <property name="visible">True</property>
-                <property name="can-focus">False</property>
-                <property name="title" translatable="yes">Default filetype</property>
-                <property name="subtitle" translatable="yes">Choose the default filetype of saved graphs</property>
-                <property name="use-underline">True</property>
-                <child>
-                  <object class="GtkDropDown" id="savefig_filetype_chooser">
-                    <property name="valign">center</property>
-                    <property name="model">
-                      <object class="GtkStringList" id="savefig_filetype_list">
-                        <items>
-                          <item translatable="yes">png</item>
-                          <item translatable="yes">ps</item>
-                          <item translatable="yes">pdf</item>
-                          <item translatable="yes">svg</item>
-                        </items>
-                      </object>
-                    </property>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child>
-              <object class="AdwActionRow">
-                <property name="visible">True</property>
-                <property name="can-focus">False</property>
-                <property name="title" translatable="yes">Transparent background</property>
-                <property name="subtitle" translatable="yes">Use a transparent background for the saved plots</property>
-                <property name="use-underline">True</property>
-                <child>
-                  <object class="GtkCheckButton" id="savefig_transparent_check_button">
-                    <property name="halign">end</property>
-                  </object>
-                </child>
-              </object>
-            </child>
-          </object>
-          </child>
-          <child>
-          <object class="AdwPreferencesGroup">
-            <property name="visible">True</property>
-            <property name="can-focus">False</property>
-            <property name="title" translatable="yes">Action behaviour</property>
-            <property name="description" translatable="yes">Preset behaviour of specific actions</property>
-            <child>
-              <object class="AdwActionRow">
-                <property name="visible">True</property>
-                <property name="can-focus">False</property>
-                <property name="title" translatable="yes">Center data</property>
-                <property name="subtitle" translatable="yes">Choose the default behaviour of the center data button</property>
-                <property name="use-underline">True</property>
-                <child>
-                  <object class="GtkDropDown" id="center_data_chooser">
-                    <property name="valign">center</property>
-                    <property name="model">
-                      <object class="GtkStringList">
-                        <items>
-                          <item translatable="yes">Center at maximum Y value</item>
-                          <item translatable="yes">Center at middle coordinate</item>
-                        </items>
-                      </object>
-                    </property>
-                  </object>
-                </child>
-              </object>
-            </child>
-          </object>
-        </child>
-        <child>
-          <object class="AdwPreferencesGroup">
-            <property name="visible">True</property>
-            <property name="can-focus">False</property>
-            <property name="title" translatable="yes">Other</property>
-            <property name="description" translatable="yes">Other general settings</property>
-            <child>
-              <object class="AdwActionRow">
-                <property name="visible">True</property>
-                <property name="can-focus">False</property>
-                <property name="title" translatable="yes">Allow duplicate filenames</property>
-                <property name="subtitle" translatable="yes">Allow duplicate filenames to be loaded</property>
-                <property name="use-underline">True</property>
-                <child>
-                  <object class="GtkCheckButton" id="allow_duplicates_button">
-                    <property name="halign">end</property>
-                  </object>
-                </child>
-              </object>
-            </child>
-          </object>
-        </child>
-      </object>
-    </child>"
+  <object class="GtkAdjustment" id = "spin_button_column_x">
+        <property name="step_increment">1</property>
+        <property name="upper">100</property>
+    </object>
+  <object class="GtkAdjustment" id = "spin_button_column_y">
+        <property name="step_increment">1</property>
+        <property name="upper">100</property>
+    </object>
+      <object class="GtkAdjustment" id = "spin_button_skip_rows">
+        <property name="step_increment">1</property>
+        <property name="upper">999</property>
+    </object>
   </template>
 </interface>
 
